# Crawssembly

./: .README.md.swp  .gitignore  Cargo.toml  LICENSE  README.md  README.md.save  make_release.py  out.c  rawtest.img  release.toml  test  testdisk.img  text.md
.github/: FUNDING.yml
CrawFS/: CrawFS.txt  dir.craw
answers/: addition.craw  arcade_leaderboard_name.craw  calculator.craw  clicking_away.craw  colourful_terminal.craw  double_loops.craw  doubling.craw  even_checker.craw  even_looper.craw  hello.craw  letter_loops.craw  long_live_the_data_1.craw  long_live_the_data_2.craw  mouse_dump.craw  multiplication.craw  my_long_list_1.craw  my_long_list_2.craw  piano_note.craw  read_write_cycle.craw  save_arrays.craw  scales.craw  smiling_screen.craw  the_new_way_to_talk.craw
examples/: basic_drawing.craw  calculator.craw  disk_read.craw  dotted_movement.craw  drawing_program.craw  efficient_multiplcation.craw  fibonacci.craw  hello_world.craw  hello_world_long.craw  keyboard_echo.craw  memory_read.craw  memory_viewer.craw  pong.craw  random_dump.craw  scale.craw  speaker_test.craw  time.craw  timer.craw
src/: -b  .assembly.craw.swp  .code.crisp.swp  .crisp.py.swp  .docs.md.swp  .gitattributes  .gitignore  .main.rs.swp  asm.rs  assembly.craw  boot  c_backend.rs  code.crisp  compiler_example.crisp  craw.craw  crisp  crisp.py  dir.craw  disk.img  docs.md  imm  imm.py  lib.rs  main.rs  notes.txt  perform  performance.py  python.py  read.craw  run  song  song.txt  song_parser.py  speech  speech.craw  speech.txt  speech_parser.py  temp.craw  test  test.craw  (+3 more)
std/: use.txt  (+2 more)
(+31 files in other folders)
