[package]
name = "crawssembly"
version = "1.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
crossterm = "0.28"
ctrlc = "3.5"
sysinfo = "0.37"

[profile.release]
debug = false

[[bin]]
name = "craw"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
