[package]
name = "crawssembly"
version = "1.0.0"
edition = "2024"
description = "An educational assembly-like language and virtual machine."
license = "MIT"
repository = "https://github.com/Jonah-Crawford/Crawssembly"
readme = "README.md"

[dependencies]
dirs = "6.0.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
crossterm = "0.28"
ctrlc = "3.5"
sysinfo = "0.37"
chrono = "0.4"

[profile.release]
debug = false

[[bin]]
name = "craw"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
